[project]
name = "pyhaywoodcc"
authors = [
    { name = "David Onder", email = "donder@haywood.edu" }
]
description = "A module of tools used by HCC staff"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "connectorx",
    "duckdb",
    "pandas",
    "polars",
    "pycolleague" # = {ref = "main", git = "git+https://github.com/Haywood-Community-College-IERG/pycolleague.git"}
]
license = {file = "license.txt"}
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/hcc-donder/pyhaywoodcc"
Issues = "https://github.com/hcc-donder/pyhaywoodcc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pyhaywoodcc/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["src/pyhaywoodcc", "data/*.csv"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"data" = "data/*.csv"
